Added third party api url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 # Flyway settings
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+# Third Party API
+# The api used is a public api made available for testing
+thirdparty.api.url=https://vpic.nhtsa.dot.gov/api/vehicles/getallmanufacturers?format=json
